chore: check-in work

--- a/docs/migration/11.x-carbon-components.md
+++ b/docs/migration/11.x-carbon-components.md
@@ -63,3 +63,31 @@
 | `$duration--slow-02`       |     |
 | `@function motion`         |     |
 | `@mixin motion`            |     |
+
+## Notes
+
+- Remove `import-once` usage
+- Where should `$prefix` live? settings? How should it propagate to all the
+  different modules?
+- Where should our "flags" live? Like `$css--reset`
+- Make sure to embed icon style reset and remove from package
+- Where should the `@keyframes skeleton` be placed from `_helper-mixins.scss`?
+- Convert `carbon--` prefixed values to raw values behind module namespace
+- Should we import directly from `@carbon/<element>` package or have aliases at
+  the top-level? (like `scss/_type.scss`) that forward from `@carbon/<element>`?
+- Codemod `type-style` to namespaced (or whatever import makes sense)
+
+**Style-guide**
+
+- Order of imports
+  - `sass:namespace`
+  - `@scoped/package`
+  - `package`
+  - `path/to/local/file`
+- Prefer explicit paths over implicit
+  - e.g. prefer `./settings` versus `settings`
+- Prefer using namespace over `@use '...' as *;`
+- If a component depends on another component's css, use the index.scss
+  entrypoint which will emit it
+- Split CSS and mixins that generate CSS (`_index.scss` will emit,
+  `_component-name.scss` with mixin);
